@@ -1,3 +1,8 @@
+2003-03-06  James Henstridge  <james@daa.com.au>
+
+	* jhbuild.py (help): update help message to indicate that -s and
+	-t are valid for the "jhbuild update" command now.
+
 2003-03-05  James Henstridge  <james@daa.com.au>
 
 	* module.py (_isxterm): set to true if the string "xterm" is found
